--- a/app/views/home/_carousel.haml
+++ b/app/views/home/_carousel.haml
@@ -1,13 +1,14 @@
--#<img src="vase-600.jpg" srcset="vase-600.jpg 600w, vase-1600.jpg 1600w, vase-2240.jpg 2240w" alt="hand-made vase painted with large blue flowers">
 :ruby
   images = [
     {
-      src: "home-page-carousel/scarf-600-min.jpg", 
+      src: "home-page-carousel/vase-600-min.jpg", 
       srcset: [
-        ["home-page-carousel/scarf-600-min.jpg", "600w"],
-        ["home-page-carousel/scarf-1200-min.jpg", "1200w"],
-        ["home-page-carousel/scarf-2240-min.jpg", "2240w"]
-      ]
+        ["home-page-carousel/vase-600-min.jpg", "600w"],
+        ["home-page-carousel/vase-1200-min.jpg", "1200w"],
+        ["home-page-carousel/vase-2240-min.jpg", "2240w"]
+      ],
+      alt: "Handmade ceramic vase by Le Souk Ceramique",
+      text: ["Gift Love.", "Valentine's is in the air."]
     },
     {
       src: "home-page-carousel/soap-600-min.jpg", 
@@ -15,15 +16,19 @@
         ["home-page-carousel/soap-600-min.jpg", "600w"],
         ["home-page-carousel/soap-1200-min.jpg", "1200w"],
         ["home-page-carousel/soap-2240-min.jpg", "2240w"]
-      ]
+      ],
+      alt: "Pampering Soaps from Aria by Lucia",
+      text: ["Gift Well-Being.", "Just Because."]
     },
     {
-      src: "home-page-carousel/vase-600-min.jpg", 
+      src: "home-page-carousel/scarf-600-min.jpg", 
       srcset: [
-        ["home-page-carousel/vase-600-min.jpg", "600w"],
-        ["home-page-carousel/vase-1200-min.jpg", "1200w"],
-        ["home-page-carousel/vase-2240-min.jpg", "2240w"]
-      ]
+        ["home-page-carousel/scarf-600-min.jpg", "600w"],
+        ["home-page-carousel/scarf-1200-min.jpg", "1200w"],
+        ["home-page-carousel/scarf-2240-min.jpg", "2240w"]
+      ],
+      alt: "Plum Crazy scarf by Indigo Handloom",
+      text: ["Gift Joy.", "It's her Birthday."]
     }
   ]
 .carousel.slide#hpb-carousel{data: {ride: 'carousel'}}
@@ -32,9 +37,25 @@
       - css_classes = ['item']
       - css_classes.push('active') if index == 0
       %div{class: css_classes}
-        = image_tag image[:src], srcset: image_tag_srcset(image[:srcset])
+        = image_tag image[:src], srcset: image_tag_srcset(image[:srcset]), alt: image[:alt]
+        .hpb-carousel-slide__text
+          .hpbcs__text-container
+            %h5= image[:text][0]
+            %h1= image[:text][1]
+            = link_to 'Get Started','#home-page-get-started', class: 'btn btn-default', data: {behavior: 'scroll-to'}
   %ol.carousel-indicators
     - images.each_with_index do |image, index|
       - css_class = index == 0 ? 'active' : ''
       %li{class: css_class, data: {target: '#hpb-carousel', slide_to: index}}
 
+- content_for :page_js do
+  :javascript
+    $(document).ready(function() {
+      $('a[data-behavior="scroll-to"]').on('click', function(e) {
+        e.preventDefault();
+        var scrollToElementSelector = $(this).attr('href');
+        $('html, body').animate({
+          scrollTop: $(scrollToElementSelector).offset().top
+        }, 1000);
+      });
+    });
