--- a/app/views/gift_recommendations/index.haml
+++ b/app/views/gift_recommendations/index.haml
@@ -3,7 +3,7 @@
     .col-xs-12
       %h1.text-center
         = "#{@profile.name}'s Gift Recommendations"
-      %p.lead.tan-002.ph2.text-center
+      %p.lead.tan-002.ph2.text-center.hidden-xs
         ="Wrapt found these items uniquely suited to #{@profile.name} based on her personality, passions, & purpose.".html_safe
   .row.wrapt-carousel--wrapper
     .col-xs-12
