change title and meta tag from give better, give wrapt to gift better, gift wrapt

--- a/app/views/layouts/_social_tags.haml
+++ b/app/views/layouts/_social_tags.haml
@@ -1,6 +1,6 @@
 -# Open Graph tags for Facebook, Pinterest, Twitter
 %meta{:content => "https://www.wrapt.com/", :property => "og:url"}/
-%meta{:content => "Give Better, Give Wrapt.", :property => "og:title"}/
+%meta{:content => "Gift Better, Gift Wrapt.", :property => "og:title"}/
 %meta{:content => "Need a gift whisperer to help you shop for her this holiday? Come to wrapt.com for handmade, artisanal gifts she will love.", :property => "og:description"}/
 %meta{:content => asset_url('hero-image-v2-1536.png'), :property => "og:image"}/
 %meta{:name => 'og:width', :content => 1536}
