--- a/app/assets/stylesheets/modules/_landing_pages.scss
+++ b/app/assets/stylesheets/modules/_landing_pages.scss
@@ -5,6 +5,9 @@
 
 #hpb-carousel {
   margin: 10px 0px 70px;
+  @media(max-width: $screen-xs-max) {
+    margin-bottom: 45px;
+  }
   .btn.btn-default {
     border-width: 2px;
     background-color: #FFFFFF;
@@ -36,9 +39,15 @@
   h5 {
     font-size: 1.8em;
     margin-bottom: 10px;
+    @media(max-width: $screen-sm-max) {
+      font-size: 14px;
+    }
   }
   h1 {
     font-size: 2.75em;
+    @media(max-width: $screen-sm-max) {
+      font-size: 26px;
+    }
   }
   @media(max-width: $screen-md-max) {
     width: 90%;
