add alt text to featured images [#154369105]

--- a/app/views/home/_how_wrapt_works.haml
+++ b/app/views/home/_how_wrapt_works.haml
@@ -7,19 +7,19 @@
   images = [
     {
       src: 'home-page-featured/featured-01-min.jpg',
-      alt: ''
+      alt: 'A Stone on a Thread earrings by Ann Chikahisa'
     },
     {
       src: 'home-page-featured/featured-02-min.jpg',
-      alt: ''
+      alt: 'Pampering soaps from Aria by Lucia'
     },
     {
       src: 'home-page-featured/featured-03-min.jpg',
-      alt: ''
+      alt: 'Incredible chocolates by Elements Truffles'
     },
     {
       src: 'home-page-featured/featured-04-min.jpg',
-      alt: ''
+      alt: 'Light and Beauty by Giraffe Home'
     }
   ]
 .wrapper--full-bleed__bg-03.pb5  
