get a little more space on mobile recommendations to see more of image [#154631767]

--- a/app/assets/stylesheets/modules/_gift_recommendations.scss
+++ b/app/assets/stylesheets/modules/_gift_recommendations.scss
@@ -4,7 +4,9 @@
 
 .gift_recommendations h1 {
   @media(max-width: $screen-xs-max) {
-    font-size: 3.9rem;
+    font-size: 28px;
+    line-height: 1.1;
+    margin-bottom: 6px;
   }
 }
 
