--- a/app/assets/stylesheets/modules/_carousel.scss
+++ b/app/assets/stylesheets/modules/_carousel.scss
@@ -14,6 +14,9 @@
 }
 .wrapt-carousel--wrapper {
   margin-top: 36px;
+  @media (max-width: $screen-sm-max) {
+    margin-top: 8px;
+  }
 }
 
 .wrapt-carousel__slides {
