change hint color

--- a/app/assets/stylesheets/modules/_typography.scss
+++ b/app/assets/stylesheets/modules/_typography.scss
@@ -145,7 +145,7 @@ h2.how-wrapt-works {
 .sqr-option-explanation {
   font-size: rem(13);
   text-align: center;
-  color: $gray-006;
+  color: $blue-001;
 }
 .gift-inclusion-heading {
   font-size: rem(12);
