change notification badge color [#154726701]

--- a/app/assets/stylesheets/modules/_icons.scss
+++ b/app/assets/stylesheets/modules/_icons.scss
@@ -11,8 +11,8 @@
 .icon-notify {
   width: 2em;
   height: 2em;
-  stroke: #8F1622;
-  fill: #8F1622;
+  stroke: #eb6666;
+  fill: #eb6666;
 }
 .navbar-static-top__icon-notify {
   position: absolute;
