update color palette; fix grid issue on 404

--- a/app/assets/stylesheets/helpers/_variables.scss
+++ b/app/assets/stylesheets/helpers/_variables.scss
@@ -19,8 +19,8 @@ $gray-011: rgb(250, 251, 252); // #FAFBFC
 $gray-012: rgb(161, 172, 178); // #A1ACB2
 $black: #000;
 
-$blue-001: rgb(145, 166, 205); // #91A6CD lightest, logo border (used for 90a5cd)
-$blue-002: rgb(113, 145, 193); // #7191c1
+$blue-001: rgb(145, 167, 206); // #91A7CE lightest, logo border (used for 90a5cd)
+$blue-002: rgb(112, 128, 144); // #708090
 $blue-003: rgb(52, 87, 139); // #34578B
 $blue-004: rgb(171, 186, 213); // #ABBAD5
 $blue-005: rgb(170, 186, 213); // #AABAD5
@@ -32,7 +32,7 @@ $blue-010: rgb(247, 248, 251); // #F7F8FB
 $blue-011: rgb(196, 210, 233); // $C5D2EA
 $blue-012: rgb(103, 130, 176); // #6782B0
 
-$tan-001: rgb(242, 221, 209); // #F2DDD1
+$tan-001: rgb(178, 160, 161); // #B2A0A1
 $tan-002: rgb(196, 170, 127); // #C4AA7F
 $tan-003: rgb(242, 226, 171); // #F2E2AB
 
@@ -44,8 +44,6 @@ $green-001: rgb(191, 232, 158); // #BFE89E
 $green-002: rgb(41, 180, 115); // #29B473
 
 $red-001: rgb(235, 103, 103); // #EB6767
-
-$tan-001: rgb(198, 177, 146); // #C6B192
 
 
 
