--- a/app/views/static_pages/page_404.haml
+++ b/app/views/static_pages/page_404.haml
@@ -5,7 +5,7 @@
         Sigh.
       %p.about-page__tagline
         We're having trouble finding the page you were looking for.
-  .row.sg-boxes
+  .row
     .col-xs-12.col-md-4.col-md-offset-4.sg-box
       .sg-box__content
         #ball.sg-box__ill
