[#154811829] fixed a bunch of bugs

--- a/app/views/my_account/giftees/_refresh_recommendations.haml
+++ b/app/views/my_account/giftees/_refresh_recommendations.haml
@@ -1,1 +1,1 @@
-= link_to 'GET FRESH SET OF RECOMMENDATIONS', giftee_survey_response_copy_path(giftee, giftee.last_survey), class: 'btn btn-default btn-block ma-giftee-card__btn', data: {loads_in_pjax_modal_two: true}
+= link_to 'GET FRESH SET OF RECOMMENDATIONS', new_basic_quiz_profile_recommendation_set_path(giftee), class: 'btn btn-default btn-block ma-giftee-card__btn', data: {loads_in_pjax_modal_two: true}
