--- a/app/views/gift_recommendations/_gift_indicators.haml
+++ b/app/views/gift_recommendations/_gift_indicators.haml
@@ -18,7 +18,7 @@
           = link_to 'NEXT', giftee_gift_recommendations_path(@giftee_id, carousel_page: @next_page), class: 'btn btn-default btn-xs btn-default__white'
       - elsif @page == @next_page && @profile.can_generate_more_recs?
         .gr-pages__next
-          = link_to 'NEXT', giftee_survey_response_copy_path(@profile, @profile.last_survey, append: '1'), class: 'btn btn-default btn-xs btn-default__white', data: {loads_in_pjax_modal_two: true}
+          = link_to 'NEXT', new_basic_quiz_profile_recommendation_set_path(@profile), class: 'btn btn-default btn-xs btn-default__white', data: {loads_in_pjax_modal_two: true}
 
       - if @page > 1
         .gr-pages__prev
@@ -26,5 +26,5 @@
  
       - if @profile.can_generate_more_recs?
         .text-center
-          = link_to 'GET MORE RECOMMENDATIONS!', giftee_survey_response_copy_path(@profile, @profile.last_survey, append: '1'), class: 'btn btn-default btn-xs btn-default__white', data: {loads_in_pjax_modal_two: true}
+          = link_to 'GET MORE RECOMMENDATIONS!', new_basic_quiz_profile_recommendation_set_path(@profile), class: 'btn btn-default btn-xs btn-default__white', data: {loads_in_pjax_modal_two: true}
 
