[#154763251] updates to enhanced ecommerce

--- a/app/views/ecommerce/checkout/edit_gift_wrapt.haml
+++ b/app/views/ecommerce/checkout/edit_gift_wrapt.haml
@@ -11,22 +11,23 @@
 
   = render "debug", customer_order: @customer_order
 
+
+- unless @load_in_modal
+  -# if it loads in the modal they are editing
+  - content_for :page_js do
+    :javascript
+      $(document).ready(function() {
+        //Google Analytics Enhanced Ecommerce
+        var products = #{@products_data}
+        gaAddProduct(products);
+        var actionData = #{@action_data};
+        gaSetAction('checkout', actionData);
+        ga('send', 'event', 'ecommerce', 'Checkout 1: Note');
+      })
+
 - content_for :page_js do
   :javascript
     $(document).ready(function() {
       App.NoteBehavior('customer_order', 'gift_wrapt', 'true', true, '.j-co-gift-wrapt__note-1')
       App.NoteBehavior('customer_order', 'include_note', '0', false, '.j-co-gift-wrapt__note-2')
-      
-      //Google Analytics Enhanced Ecommerce
-      //What I think I need
-      //Maybe this should happen on submit?
-      //Maybe shouldn't send if they are editing
-      
-      ga('ec:setAction', 'checkout', {
-        'option': 'Checkout 1: Note', 
-        'step': 1,
-        'dimension1': '#{analytics_gifter_id || -1}',
-        'dimension4': 'n/a'
-      });
-      // send event
     })
