--- a/app/views/ecommerce/checkout/edit_payment.haml
+++ b/app/views/ecommerce/checkout/edit_payment.haml
@@ -26,19 +26,11 @@
       App.ShowBillingAddress('', 'same_billing_zip', 'true', false, '.j-zip-code')
 
       //Google Analytics Enhanced Ecommerce
-      //What I think I need
-      //Maybe this should happen on submit?
-      var actionData = {
-        'option': 'Checkout 4: Payment Info',
-        'step': 4,
-        'tax': '#{@customer_order.taxes_in_dollars}',
-        'shipping': '#{@customer_order.combined_handling_in_dollars}',
-        'revenue': '#{@customer_order.total_to_charge_in_dollars}',
-        'dimension1': '#{analytics_gifter_id || -1}',
-        'dimension4': 'n/a'
-      }
-      ga('ec:setAction', 'checkout', actionData)
-      // send event
+      var products = #{@products_data}
+      gaAddProduct(products);
+      var actionData = #{@action_data}
+      gaSetAction('checkout', actionData);
+      ga('send', 'event', 'ecommerce', 'Checkout 4: Payment Info');
     })
 
 
