--- a/app/views/ecommerce/checkout/finalize.haml
+++ b/app/views/ecommerce/checkout/finalize.haml
@@ -38,17 +38,10 @@
 = content_for :page_js do
   :javascript
     //Google Analytics Enhanced Ecommerce
-    // What I think I need
-    // add product for ead product purchased
     $('document').ready(function() {
-      var actionData = {
-        'id': '#{@customer_order.id}',
-        'tax': '#{@customer_order.taxes_in_dollars}',
-        'shipping': '#{@customer_order.combined_handling_in_dollars}',
-        'revenue': '#{@customer_order.total_to_charge_in_dollars}',
-        'dimension1': '#{analytics_gifter_id || -1}',
-        'dimension4': '#{@customer_order.promo_code}'
-      }
-      ga('ec:setAction', 'purchase', actionData);
-      // send event
+      var products = #{@products_data}
+      gaAddProduct(products);
+      var actionData = #{@action_data};
+      gaSetAction('purchase', actionData);
+      ga('send', 'event', 'ecommerce', 'Purchase');
     })
