--- a/app/views/basic_quiz/change_profiles/new.haml
+++ b/app/views/basic_quiz/change_profiles/new.haml
@@ -1,6 +1,17 @@
-.bq-container
-  %h1 Adjust any Basics?
-  = render 'basic_quiz/shared/quiz_form'
+.shopping-trip-container
+  %h1 Is this for someone for whom you’ve previously taken the quiz? 
+  %p You can answer the questions anew! We’ll prefill the basics for you.
+  = simple_form_for :change_profile, url: basic_quiz_profile_change_profiles_path(@profile), method: :post, html: {class: 'shopping-trip-form', data: {submits_to_pjax_modal_two: true}} do |f|
+    - collection = @relationship_profiles.map{|r| [r.id, r.name]}
+    = f.input :profile_id, as: :radio_buttons , collection: collection, value_method: :first, label_method: :last, label: false
+    %button(pjax-modal-close type="button" class="someone-new-btn") Take Quiz for Someone New
 
-= render 'basic_quiz/shared/edit_js'
-
+- content_for :page_js do
+  :javascript
+    $(document).ready(function() {
+      var form = $('.shopping-trip-form');
+      var inputs = form.find('input');
+      inputs.on('change', function() {
+        form.submit()
+      })
+    })
