home page copy edit b/c after Valentine's Day

--- a/app/views/home/_carousel.haml
+++ b/app/views/home/_carousel.haml
@@ -8,7 +8,7 @@
         ["home-page-carousel/vase-2240-min.jpg", "2240w"]
       ],
       alt: "Handmade ceramic vase by Le Souk Ceramique",
-      text: ["Gift Love.", "Valentine's is in the air."]
+      text: ["Gift Love.", "Because you don't tell her enough."]
     },
     {
       src: "home-page-carousel/soap-600-min.jpg", 
