--- a/app/views/gift_recommendations/_gift_nav.haml
+++ b/app/views/gift_recommendations/_gift_nav.haml
@@ -4,7 +4,7 @@
       =embedded_svg('icon-caret-left', class: "gr-carousel__nav--caret-left")
     .gr-carousel__nav-inner
   - if @profile.can_generate_more_recs? && @gift_index+1 == @gift_recommendations.size
-    = link_to giftee_survey_response_copy_path(@profile, @profile.last_survey, append: '1'), class: 'wrapt-carousel__nav gr-carousel__nav next', onClick: "ga('send', 'event', 'recommendation', 'navigation', 'gift nav');", data: {loads_in_pjax_modal_two: true} do
+    = link_to new_basic_quiz_profile_recommendation_set_path(@profile), class: 'wrapt-carousel__nav gr-carousel__nav next', onClick: "ga('send', 'event', 'recommendation', 'navigation', 'gift nav');", data: {loads_in_pjax_modal_two: true} do
       .gr-carousel__nav-icon
         =embedded_svg('icon-caret-right', class: "gr-carousel__nav--caret-right")
       .gr-carousel__nav-inner
